--- a/package.json
+++ b/package.json
@@ -9,21 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.58.4",
-    "@react-three/fiber": "^8.12.0",
-    "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.9.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
-    "react-parallax": "^3.5.1",
     "react-query": "^3.39.3",
-    "react-responsive-masonry": "^2.1.7",
-    "three": "^0.150.1"
+    "react-responsive-masonry": "^2.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
